crates/unsoundness_checker/tests/snapshots/extensive/markdown_test__typing_overload_used.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: combined_output
---
### Basic incorrect overload implementation

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:3:1
  |
1 | from typing import overload
2 |
3 | @overload
  | ^^^^^^^^^
4 | def foo(x: int) -> str: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:6:1
  |
4 | def foo(x: int) -> str: ...
5 |
6 | @overload
  | ^^^^^^^^^
7 | def foo(x: str) -> int: ...
  |
info: rule `typing-overload-used` was selected in the configuration file


### Overload with wrong return type

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:3:1
  |
1 | from typing import overload
2 |
3 | @overload
  | ^^^^^^^^^
4 | def process(x: int) -> str: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:6:1
  |
4 | def process(x: int) -> str: ...
5 |
6 | @overload
  | ^^^^^^^^^
7 | def process(x: str) -> int: ...
  |
info: rule `typing-overload-used` was selected in the configuration file


### Multiple parameter overloads

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:3:1
  |
1 | from typing import overload
2 |
3 | @overload
  | ^^^^^^^^^
4 | def combine(a: int, b: int) -> int: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:6:1
  |
4 | def combine(a: int, b: int) -> int: ...
5 |
6 | @overload
  | ^^^^^^^^^
7 | def combine(a: str, b: str) -> str: ...
  |
info: rule `typing-overload-used` was selected in the configuration file


### Overload with optional parameters

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:3:1
  |
1 | from typing import overload
2 |
3 | @overload
  | ^^^^^^^^^
4 | def create(name: str) -> dict[str, str]: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:6:1
  |
4 | def create(name: str) -> dict[str, str]: ...
5 |
6 | @overload
  | ^^^^^^^^^
7 | def create(name: str, age: int) -> dict[str, str | int]: ...
  |
info: rule `typing-overload-used` was selected in the configuration file


### Method overloads

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:4:5
  |
3 | class DataProcessor:
4 |     @overload
  |     ^^^^^^^^^
5 |     def process(self, data: int) -> str: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:7:5
  |
5 |     def process(self, data: int) -> str: ...
6 |
7 |     @overload
  |     ^^^^^^^^^
8 |     def process(self, data: str) -> int: ...
  |
info: rule `typing-overload-used` was selected in the configuration file


### Classmethod overloads

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:4:5
  |
3 | class Factory:
4 |     @overload
  |     ^^^^^^^^^
5 |     @classmethod
6 |     def create(cls, value: int) -> "Factory": ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
  --> main.py:8:5
   |
 6 |     def create(cls, value: int) -> "Factory": ...
 7 |
 8 |     @overload
   |     ^^^^^^^^^
 9 |     @classmethod
10 |     def create(cls, value: str) -> "Factory": ...
   |
info: rule `typing-overload-used` was selected in the configuration file


### Staticmethod overloads

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:4:5
  |
3 | class Utilities:
4 |     @overload
  |     ^^^^^^^^^
5 |     @staticmethod
6 |     def convert(x: int) -> str: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
  --> main.py:8:5
   |
 6 |     def convert(x: int) -> str: ...
 7 |
 8 |     @overload
   |     ^^^^^^^^^
 9 |     @staticmethod
10 |     def convert(x: str) -> int: ...
   |
info: rule `typing-overload-used` was selected in the configuration file


### Overload with generic types

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:5:1
  |
3 | T = TypeVar('T')
4 |
5 | @overload
  | ^^^^^^^^^
6 | def wrap(value: int) -> list[int]: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:8:1
  |
6 | def wrap(value: int) -> list[int]: ...
7 |
8 | @overload
  | ^^^^^^^^^
9 | def wrap(value: str) -> list[str]: ...
  |
info: rule `typing-overload-used` was selected in the configuration file


### Nested overloads in class

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:4:5
  |
3 | class Calculator:
4 |     @overload
  |     ^^^^^^^^^
5 |     def compute(self, x: int, y: int) -> int: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:7:5
  |
5 |     def compute(self, x: int, y: int) -> int: ...
6 |
7 |     @overload
  |     ^^^^^^^^^
8 |     def compute(self, x: float, y: float) -> float: ...
  |
info: rule `typing-overload-used` was selected in the configuration file


### Overload with complex return types

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:3:1
  |
1 | from typing import overload
2 |
3 | @overload
  | ^^^^^^^^^
4 | def fetch(id: int) -> dict[str, int]: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:6:1
  |
4 | def fetch(id: int) -> dict[str, int]: ...
5 |
6 | @overload
  | ^^^^^^^^^
7 | def fetch(id: str) -> dict[str, str]: ...
  |
info: rule `typing-overload-used` was selected in the configuration file


### Overload with None return

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:3:1
  |
1 | from typing import overload
2 |
3 | @overload
  | ^^^^^^^^^
4 | def maybe_process(x: int) -> int: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:6:1
  |
4 | def maybe_process(x: int) -> int: ...
5 |
6 | @overload
  | ^^^^^^^^^
7 | def maybe_process(x: None) -> None: ...
  |
info: rule `typing-overload-used` was selected in the configuration file


### Multiple overloads same signature

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:3:1
  |
1 | from typing import overload, Literal
2 |
3 | @overload
  | ^^^^^^^^^
4 | def get_value(key: Literal["name"]) -> str: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:6:1
  |
4 | def get_value(key: Literal["name"]) -> str: ...
5 |
6 | @overload
  | ^^^^^^^^^
7 | def get_value(key: Literal["age"]) -> int: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
  --> main.py:9:1
   |
 7 | def get_value(key: Literal["age"]) -> int: ...
 8 |
 9 | @overload
   | ^^^^^^^^^
10 | def get_value(key: str) -> str | int: ...
   |
info: rule `typing-overload-used` was selected in the configuration file


### Overload with callbacks

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:3:1
  |
1 | from typing import overload, Callable
2 |
3 | @overload
  | ^^^^^^^^^
4 | def process_with(handler: Callable[[int], str]) -> str: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:6:1
  |
4 | def process_with(handler: Callable[[int], str]) -> str: ...
5 |
6 | @overload
  | ^^^^^^^^^
7 | def process_with(handler: Callable[[str], int]) -> int: ...
  |
info: rule `typing-overload-used` was selected in the configuration file
